[package]
name = "file-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
ratatui = { version = "0.22.0", features = ["all-widgets"]}
tokio = {version = "1", features = ["full"]}
